deleted aside, cleaned up css and html, fixed positioning on about me section

--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
 </head>
 
 <body>
+    <!-- HEADER -->
     <header>
         <h1>Ezmaa</h1>
         <nav>
-            <a id="about" href="#About">About Me</a>
-            <a id="work" href="#Work">Work</a>
-            <a id="contact" href="#Contact">Contact Me</a>
+            <a href="#about">About Me</a>
+            <a href="#work">Work</a>
+            <a href="#contact">Contact Me</a>
         </nav>
     </header>
+    <!-- MAIN -->
     <main>
-        <aside>
-            <h2>About</h2>
-            <div>
-                <h2>Work</h2>
+        <!-- About me Section -->
+        <section id="about" class="tabs">
+            <div class="center-text">
+                <h3>About Me </h3>
             </div>
-            <div>
-                <h2>Contact</h2>
-            </div>
-        </aside>
-        <section class="tabs">
-            <h3>About Me </h3>
-            <div>
+            <div class="about-me img">
                 <a href="https://www.google.com"> <img
                         src="https://lh3.googleusercontent.com/bHvcJ2tpr4h4wAhJ4Kd5ipqvwJT_NboIe1Nv3OTVGLwdP9a5s9bDZUiIzS9SN51J2guaIvCW9GaXXCHT5gzOYv2wktGPvahUaIXsZHnq_GMnbYgv0wSvMBnRS0ujje9Ej1_tRVy0bDNNMpIK77fHwTW94vOmTsX7Y3TdUtnB08UFCL67QjP9m3b62v7oWlw7hma4ksqwT3zflccf4rrG-_GUrBIoazOAyoqs_TKgpgAcZNbE-85w06Knordu4CJcrzpo7KgBH2QfsGffGEGNh8O4pnTU6FzBEMECDc_RnpsbuqA2Nnc87VP0fo5vdVkJgbLpOwRqq1v__q400-OMCUt9hOrRx6RboANKPk_SMImM2KRmCVnoXtBNfopGTjZ5_cw6DcIcP5JarcBARJD96jUfc6xdF_MP0fDjTgIm6Uf4mgE1BH5qIihTRFDZgs_Bxv0S_TBIyIyY3tduCcnIBtZP_nbOwrqjvSHk303cGP5ufVoauUxLu2IX6DIyEAJleZNyFUeJF01XO0H8CRGhVrr5VqlHLXwOBtAcQyNbvDL10-oFL2uIkezQa2DwJOJw9qV6OuIDzyUQ39ZI0_rYelG00Yq0CkiFfwPzX3AF_m7A93TqxBHl88zsr586Afq1GUTBWpQg6vZavPu5jjvBD2XKRH8oaj5X5PsTx6DI7gaMFoIEc-gZ7g8ShOyx7klkc_bjBn-vlmO4o0HVXKhvDbGumP38AYKM7xWeSTkrm5Rp4zEdmHhbhVlyQULztyVdez86wu2JOUHHd1OIE3jYTFvw3orgOKD5axXZ4NG0JvSNwwCo_sAxbsY-_IKH3DCZSWIWlfaQ_ON2kB8H-s-SDNnS0qW6jcy86CbGJ7dm0D80ciEDKO9bGU7JVYyAV92dJfHtvV-F94XF9G6E99ha9BeLNodZEKNdCp3BANu2bCHygayjuAEBhBvmFAE9UON3-adgPvP1So8=w1146-h1526-no?authuser=0"
                         alt="Ezmaa on paddle board"></a>
+                <p>My name is Ezinma (Ezma), I like to be as active as possible. Here I am paddle boarding! In my free
+                    time I am either working out or learning something new. I think to be a happy person in life you
+                    must always challenge yourself!</p>
             </div>
         </section>
-        <Section class="tabs">
+        <!-- Work Section -->
+        <Section id="Work" class="work tabs">
             <h3>Work</h3>
             <div id="big">
                 <a href="https://ezmaa.github.io/prework-sg/"> <img
@@ -47,25 +47,27 @@
                 <a href="https://ezmaa.github.io/bootcamp-homework/"> <img
                         src="https://lh3.googleusercontent.com/GovXMkHGOIs4xmhAUQAEw-LpvITwlTneAb8xNliJ00XHpi-4OB-ly4hdKBkBKz7Hokx2P6ZZUJvfnGJnICrlph3AN7ytD-ZY97sdyLgBI6sphzRs9GIPaRWjp1owG4OByI07_fd-86Kj7SSNwxZiUO4K3jsiEdiCc_R9cBHDxR8QVKZ10CcJn-xB8UIa9WbYQ-3CatttSkftM8s33VbRZQl7tJS2yyQdYB_DSNLi5k9bsCj2U5S0JuD7TcxuWA2t_Wn8BjwhONhNonES1x3Gwo3ulnY8O61nbxbb-Lg2TQ7OtgMVvmTj5NnOmGk5LK2RJJ8SC0xab2bqLlVFu0L74YGWvR2qKKeJyECVuVlvYX292A_u2j1NEaBPtj35Q8LsW00ebofAT3PHd7HUcxx1z-45NDVC5NcuNHkhQTTcsAmeUulaRKvW75JWXeZDK2MtjixpxPg9shCcrxDwrX1uMYt4pTX5egGfGXYnLn7PQBahwI7jxwIpNHF754ol0HWwwLX9Q0o7sYpXAgXmdob9LUkyhulWCDkUFZS5z9Q200HkqyN4PHMoq51h3ogqzFsU1Om8aWvaPAXCQ1ak00v8sysCgq8K-1c0uVcpkwFJYuahA-CmLSWdRbc254hlPXQi5U-3JYvNVCZvqsZIVZmsDoknBxEefJJDchOjYxwa6mB1GCyzsldD0Jwi19wmkCMkh9mIkgkWWKvpnFru80NocfWJhbxyHbn-5tmaGAcCQWmGzp_pzEel3uE2vmDubIilg08WRGBvuQzzMkuIK4r8PI3J7dcUnSFg5uSOXCn3PlDwAwsBBz0J00GaOLtMSXlLLkub_S8K6w78JkxnF3aimdjej-fYEWqNMVpUtNJvFYNf3ON4-BjU8GWQV9SuThEvw2szOStV9JdTeGlambmknvmofamJdORLwHdOBAJLH82D1FLIENGfWAVNYgE0TnIRsVXgcs3URsU=w2800-h1384-no?authuser=0"
                         alt="github picture"></a>
-            </div>
-            <div>
+
                 <a href="https://ezmaa.github.io/prework-study-guide/"> <img
                         src="https://lh3.googleusercontent.com/GovXMkHGOIs4xmhAUQAEw-LpvITwlTneAb8xNliJ00XHpi-4OB-ly4hdKBkBKz7Hokx2P6ZZUJvfnGJnICrlph3AN7ytD-ZY97sdyLgBI6sphzRs9GIPaRWjp1owG4OByI07_fd-86Kj7SSNwxZiUO4K3jsiEdiCc_R9cBHDxR8QVKZ10CcJn-xB8UIa9WbYQ-3CatttSkftM8s33VbRZQl7tJS2yyQdYB_DSNLi5k9bsCj2U5S0JuD7TcxuWA2t_Wn8BjwhONhNonES1x3Gwo3ulnY8O61nbxbb-Lg2TQ7OtgMVvmTj5NnOmGk5LK2RJJ8SC0xab2bqLlVFu0L74YGWvR2qKKeJyECVuVlvYX292A_u2j1NEaBPtj35Q8LsW00ebofAT3PHd7HUcxx1z-45NDVC5NcuNHkhQTTcsAmeUulaRKvW75JWXeZDK2MtjixpxPg9shCcrxDwrX1uMYt4pTX5egGfGXYnLn7PQBahwI7jxwIpNHF754ol0HWwwLX9Q0o7sYpXAgXmdob9LUkyhulWCDkUFZS5z9Q200HkqyN4PHMoq51h3ogqzFsU1Om8aWvaPAXCQ1ak00v8sysCgq8K-1c0uVcpkwFJYuahA-CmLSWdRbc254hlPXQi5U-3JYvNVCZvqsZIVZmsDoknBxEefJJDchOjYxwa6mB1GCyzsldD0Jwi19wmkCMkh9mIkgkWWKvpnFru80NocfWJhbxyHbn-5tmaGAcCQWmGzp_pzEel3uE2vmDubIilg08WRGBvuQzzMkuIK4r8PI3J7dcUnSFg5uSOXCn3PlDwAwsBBz0J00GaOLtMSXlLLkub_S8K6w78JkxnF3aimdjej-fYEWqNMVpUtNJvFYNf3ON4-BjU8GWQV9SuThEvw2szOStV9JdTeGlambmknvmofamJdORLwHdOBAJLH82D1FLIENGfWAVNYgE0TnIRsVXgcs3URsU=w2800-h1384-no?authuser=0"
                         alt="github picture"></a>
             </div>
         </Section>
-        <Section class="tabs">
+        <!-- Contact section -->
+        <Section id="contact" class="contact tabs">
             <h3>Contact</h3>
             <div>
                 <p>
-                    <ul>
-                        <li><a href = "mailto: ezinmark@gmail.com"> Email: Ezinmark@gmail.com</a></li>
-                        <li><a href="tel: 6039436196">Call: 603-943-6196</a></li>
-                    </ul>
+                <ul>
+                    <li><a href="mailto: ezinmark@gmail.com"> Email: Ezinmark@gmail.com</a></li>
+                    <li><a href="tel: 6039436196">Call: 603-943-6196</a></li>
+                </ul>
                 </p>
             </div>
         </Section>
     </main>
+    <!-- FOOTER -->
+    <footer></footer>
 </body>
 
 </html>
