--- a/index.html
+++ b/index.html
@@ -36,22 +36,25 @@
             </div>
         </section>
         <!-- Work Section -->
-        <Section id="Work" class="work tabs">
-            <h3>Work</h3>
+        <Section id="work" class="work tabs">
+            <div>
+                <h3>Work</h3>
+            </div>
             <div id="big">
-                <a href="https://ezmaa.github.io/prework-sg/"> <img
-                        src="https://lh3.googleusercontent.com/GovXMkHGOIs4xmhAUQAEw-LpvITwlTneAb8xNliJ00XHpi-4OB-ly4hdKBkBKz7Hokx2P6ZZUJvfnGJnICrlph3AN7ytD-ZY97sdyLgBI6sphzRs9GIPaRWjp1owG4OByI07_fd-86Kj7SSNwxZiUO4K3jsiEdiCc_R9cBHDxR8QVKZ10CcJn-xB8UIa9WbYQ-3CatttSkftM8s33VbRZQl7tJS2yyQdYB_DSNLi5k9bsCj2U5S0JuD7TcxuWA2t_Wn8BjwhONhNonES1x3Gwo3ulnY8O61nbxbb-Lg2TQ7OtgMVvmTj5NnOmGk5LK2RJJ8SC0xab2bqLlVFu0L74YGWvR2qKKeJyECVuVlvYX292A_u2j1NEaBPtj35Q8LsW00ebofAT3PHd7HUcxx1z-45NDVC5NcuNHkhQTTcsAmeUulaRKvW75JWXeZDK2MtjixpxPg9shCcrxDwrX1uMYt4pTX5egGfGXYnLn7PQBahwI7jxwIpNHF754ol0HWwwLX9Q0o7sYpXAgXmdob9LUkyhulWCDkUFZS5z9Q200HkqyN4PHMoq51h3ogqzFsU1Om8aWvaPAXCQ1ak00v8sysCgq8K-1c0uVcpkwFJYuahA-CmLSWdRbc254hlPXQi5U-3JYvNVCZvqsZIVZmsDoknBxEefJJDchOjYxwa6mB1GCyzsldD0Jwi19wmkCMkh9mIkgkWWKvpnFru80NocfWJhbxyHbn-5tmaGAcCQWmGzp_pzEel3uE2vmDubIilg08WRGBvuQzzMkuIK4r8PI3J7dcUnSFg5uSOXCn3PlDwAwsBBz0J00GaOLtMSXlLLkub_S8K6w78JkxnF3aimdjej-fYEWqNMVpUtNJvFYNf3ON4-BjU8GWQV9SuThEvw2szOStV9JdTeGlambmknvmofamJdORLwHdOBAJLH82D1FLIENGfWAVNYgE0TnIRsVXgcs3URsU=w2800-h1384-no?authuser=0"
+                <a href="https://ezmaa.github.io/bootcamp-homework/"> <img
+                        src="https://lh3.googleusercontent.com/8980EfUpCCLCA-vmPHz6MHuWZaYf1-bcjb4HKK6my3DB-StcrejMGKt3xW2I3OBK87nmRrAKHp8aax10RA1puT7iJFRZutYiwz6tmyL4o-wWyZ3qTici3OAZbazOYn2xpBMrkNNAXnM31SW_3aa7bgdR6GWhHa3v9N-DTbDMco0DXnCJCmRxMSwZrUKxdHl6uhA3mph13a_voPMeVjfCjUz-zcmhSF-yKGCeBT3U-Py-4k5wsIfblHxHuP93hRGJg22TWML0wnwmfhwwVL9KXumDm34AaiWIz4Ct7EFwgd-3IXCb7YxHxrvTW2lT9mgzrwLYt4_cQusx6vkfa_FoAONX0_RpWRcrJnTCMTIEX206SjunJ-q88V2BR9Wu0R5m_pQ8OM6y-O2QDa0XI3E2h73dRSmehH9SFeezj99koBaoTXdz33rmqHwA7sh9zB6HN0CUXRIr8UPEfCxFNGDVZUdHcmpINHhL-l9L7ivR3_7odlGjic7Ad5d5RqQk14evHKKR4erQ8-2czveDX_2B31imXb1HtK7qNLZUr78wfiOy3K7rPFHG9nITugx_hIB_tJFjifHhg7Z2Vkiu6b_ZBsOMR3HBJw9Eh8y_lFPtx-O1Ce_DkxeUC6yPl_zF6SRQter8dXndc2rZ-yNfhEmcj_2jL3zPKlVunm372pqPUVSBfSagKG36YeQmVTfswgM6czxqZ19uf2Ujw2XXPl5EOhD_-OTxh7BQwxAuq3Z6TpXlNSEUJYc0EJI31GqmkMSz9-gxxwAhN7as8UEiB3YFlCxy3lLWLfPeQzbejwZ884f2A08KmRVcwPrWTj4boRnx-vByrFf92c2UrTkSyLmNE3ScJpmmuNCk4BXNkerjAIrgqo4KZR4l_akouFzW4MivHAM42-NQ6T7rHuwZGBH4NBVnA3GdfFtjVusMsYINdkH12lmEvFcazI7-kI2arFORIKdUAKd9590=w2762-h1522-no?authuser=0"
                         alt="github picture"></a>
             </div>
-            <div>
-                <a href="https://ezmaa.github.io/bootcamp-homework/"> <img
-                        src="https://lh3.googleusercontent.com/GovXMkHGOIs4xmhAUQAEw-LpvITwlTneAb8xNliJ00XHpi-4OB-ly4hdKBkBKz7Hokx2P6ZZUJvfnGJnICrlph3AN7ytD-ZY97sdyLgBI6sphzRs9GIPaRWjp1owG4OByI07_fd-86Kj7SSNwxZiUO4K3jsiEdiCc_R9cBHDxR8QVKZ10CcJn-xB8UIa9WbYQ-3CatttSkftM8s33VbRZQl7tJS2yyQdYB_DSNLi5k9bsCj2U5S0JuD7TcxuWA2t_Wn8BjwhONhNonES1x3Gwo3ulnY8O61nbxbb-Lg2TQ7OtgMVvmTj5NnOmGk5LK2RJJ8SC0xab2bqLlVFu0L74YGWvR2qKKeJyECVuVlvYX292A_u2j1NEaBPtj35Q8LsW00ebofAT3PHd7HUcxx1z-45NDVC5NcuNHkhQTTcsAmeUulaRKvW75JWXeZDK2MtjixpxPg9shCcrxDwrX1uMYt4pTX5egGfGXYnLn7PQBahwI7jxwIpNHF754ol0HWwwLX9Q0o7sYpXAgXmdob9LUkyhulWCDkUFZS5z9Q200HkqyN4PHMoq51h3ogqzFsU1Om8aWvaPAXCQ1ak00v8sysCgq8K-1c0uVcpkwFJYuahA-CmLSWdRbc254hlPXQi5U-3JYvNVCZvqsZIVZmsDoknBxEefJJDchOjYxwa6mB1GCyzsldD0Jwi19wmkCMkh9mIkgkWWKvpnFru80NocfWJhbxyHbn-5tmaGAcCQWmGzp_pzEel3uE2vmDubIilg08WRGBvuQzzMkuIK4r8PI3J7dcUnSFg5uSOXCn3PlDwAwsBBz0J00GaOLtMSXlLLkub_S8K6w78JkxnF3aimdjej-fYEWqNMVpUtNJvFYNf3ON4-BjU8GWQV9SuThEvw2szOStV9JdTeGlambmknvmofamJdORLwHdOBAJLH82D1FLIENGfWAVNYgE0TnIRsVXgcs3URsU=w2800-h1384-no?authuser=0"
+            <div class="work-section">
+                <a href="https://ezmaa.github.io/prework-sg/"> <img
+                        src="https://lh3.googleusercontent.com/gTRtGvlFxqRs84Ao0Foqptrp2lCvE9vOWwQ2sd_0R_s38L8MGE3O0lIm3_RkCfpao0qX-DOzAbBoyzdnT87yIlPRoNxLbsIf2zwoL7XTtaZGsWGrBMxgF-0160VDTIO7sJGO9DAMW_vkwpLNjuBNUUKFG2KplBO4VClja56Gl1KkagPdwPgHjxWGLCkGJokfN8uUzJmf9xWfNkr4iPI_O2Bc6ovqGZuCHDrcYmJHTNG7xa2BdMQmseoEqNixtCBcEXRh_B_6V4s-K2ZTdBH30UX9B8W2NrAOsRL01nPb_2UGKNSF_keGraS-6VZUYzSQQA_j3XEq8jbXJ2l_gqZ3br2lOpE80QBKl7Q-jDoEB4TA2w5222T0EvB7W47mKAA97WLbQd0yIYEGdtqVFUC9E82UIOhEztRryK2lOQXyEwGrNmfE2N_lP8JHHZdwFGXl046hQeuOJ5Jt7xDS1bgaa7KT86qvJq-ZD1tvSiZT2b7cbYDLR3E_GVw2WtSitHH282C_uyvZCbKUu1hLkCZxdmVSE2dV27I6RJbb9TH7_Voa68Sui8DZeKpyUysXze-O0JFaEW6QnIMTmFRS2ZHKFFKJaTNqOPOptgO0H1eu8HARnBLQnh9XqLS-TkqYZivWvsg9Dm8rJ-QyUiuNdLaFYWKBGh0ks89yz1_NxkAH6uHAm3nB0XFivf_ZKFni18xwHIVUyRKwvtGWfQUg1pgPdOIvNBkOad4GfSUlYzahpNxgRnDNlwquHvg807NKT_KF_UkCQaz_BxpIL4ejmGKGyqF6Jq8n4yJKBF9O9poGoGrsJ-ZhEFM1PXcMG1YSJ3f-G8u-6cyfyK3DlLqWn57Y9OwRMA1UfbgNBT9cxha_oCU8IlIgqmGN66Gj00o05pKJ5InW9tXWF17n_U6Wo-V0S4kWtirQkzwNpLxNRWxzip4tyEMmWK3Hn-Ke7T_pE2XWxGglqL8wzlQ=w2654-h1410-no?authuser=0"
                         alt="github picture"></a>
 
                 <a href="https://ezmaa.github.io/prework-study-guide/"> <img
-                        src="https://lh3.googleusercontent.com/GovXMkHGOIs4xmhAUQAEw-LpvITwlTneAb8xNliJ00XHpi-4OB-ly4hdKBkBKz7Hokx2P6ZZUJvfnGJnICrlph3AN7ytD-ZY97sdyLgBI6sphzRs9GIPaRWjp1owG4OByI07_fd-86Kj7SSNwxZiUO4K3jsiEdiCc_R9cBHDxR8QVKZ10CcJn-xB8UIa9WbYQ-3CatttSkftM8s33VbRZQl7tJS2yyQdYB_DSNLi5k9bsCj2U5S0JuD7TcxuWA2t_Wn8BjwhONhNonES1x3Gwo3ulnY8O61nbxbb-Lg2TQ7OtgMVvmTj5NnOmGk5LK2RJJ8SC0xab2bqLlVFu0L74YGWvR2qKKeJyECVuVlvYX292A_u2j1NEaBPtj35Q8LsW00ebofAT3PHd7HUcxx1z-45NDVC5NcuNHkhQTTcsAmeUulaRKvW75JWXeZDK2MtjixpxPg9shCcrxDwrX1uMYt4pTX5egGfGXYnLn7PQBahwI7jxwIpNHF754ol0HWwwLX9Q0o7sYpXAgXmdob9LUkyhulWCDkUFZS5z9Q200HkqyN4PHMoq51h3ogqzFsU1Om8aWvaPAXCQ1ak00v8sysCgq8K-1c0uVcpkwFJYuahA-CmLSWdRbc254hlPXQi5U-3JYvNVCZvqsZIVZmsDoknBxEefJJDchOjYxwa6mB1GCyzsldD0Jwi19wmkCMkh9mIkgkWWKvpnFru80NocfWJhbxyHbn-5tmaGAcCQWmGzp_pzEel3uE2vmDubIilg08WRGBvuQzzMkuIK4r8PI3J7dcUnSFg5uSOXCn3PlDwAwsBBz0J00GaOLtMSXlLLkub_S8K6w78JkxnF3aimdjej-fYEWqNMVpUtNJvFYNf3ON4-BjU8GWQV9SuThEvw2szOStV9JdTeGlambmknvmofamJdORLwHdOBAJLH82D1FLIENGfWAVNYgE0TnIRsVXgcs3URsU=w2800-h1384-no?authuser=0"
+                        src="https://lh3.googleusercontent.com/dcKymj4afAow8aMRFKgoUrD3VchltgwveDoxZhUddivG_ixBcC3cK4TzB1Mt-lCnMgvzQ5gukGU6V8DlBX2y5DzyqHXlJ5Du4GOCn0r5SobOVguIzPNeiP1OBi34cu94ilcm8X0-qZ3xqux1CBpBbRp2wv7twu5HBCZili5Gu4dV2jDzbkfbjN2St7QHocbjgQYlOGjxdLrYP8TJz3Oopo0BQLyHe3REoXNWcxHuHZmB-XSDvUJvCLJcSHMToQgHxtuxo1Nao1QZ-Ha3fm1fZkc2rSGuLQu5M55yzFkTgjK8WJ07J00e-sBVOa5q3dawNN3lTUpLrEEW2KTsw4ItmZZX3ua8FUQHofymNhPf1SFiWedX1WRcvOOE_DQbHJw7v7tYYSFmVJfdjC0KJMgvQbgJ_kK65RoF1EZEkcQKCebpWiht3zQ-DJIMGmrBoBd1SfX6aUEz8iUkhFb0OTmlVevnnTUS9FPmbgPn8mVX9YceQXKQFBthkXa-PnIriqaBB-XP9KgK1NrcZTYPIjHb6g_KODKK6bVOA_185-ojTGMOKdAbqadtv0uyDajOkkOEIMZtI8OVZ-sdi4hw1AlDS6xctk1FciGH0jIY_DlWPLxTBeCQ8-EZ0LCo3PnC4jSSRKYXOl5RC2cjgr71zM7EdVhq8WvhOkKiQ0L6BBQF0Qx4B3KcFNbatl3-HQ_ktH1gwCbniV6RPQsaHNZDrp6asq9ZBVrse928tvroGK1IRi0sAXQN1P68PSnphfz4_2DliPOiHWI2OWPNs7C_ZwTyQ07uK8KkfzmXHxCj8piOD5oqhYKMGSABXdO6MJFq4yCUGOko3hIjaSwNchJrznAnf3QqUFl5YeMS0hAh2oPbudDoBEok9yiNV-BtIUd8bzo9Mo5gyAg3R9i-zYi50Qzt6c4u-Gz9fGawvsbwkHiiy9UW4eOh0fwnP6lp_XpbAKnbMhDds25OD1w=w2878-h1066-no?authuser=0"
                         alt="github picture"></a>
             </div>
+            <!-- Added fake projects to meet criteria -->
         </Section>
         <!-- Contact section -->
         <Section id="contact" class="contact tabs">
@@ -61,6 +64,7 @@
                 <ul>
                     <li><a href="mailto: ezinmark@gmail.com"> Email: Ezinmark@gmail.com</a></li>
                     <li><a href="tel: 6039436196">Call: 603-943-6196</a></li>
+                    <li><a href="https://github.com/"> Github: Ezmaa</a></li>
                 </ul>
                 </p>
             </div>
