add images to folders so that the image links are not broken when pge is loaded.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="about-me">
                 <div>
-                    <img src="https://lh3.googleusercontent.com/bHvcJ2tpr4h4wAhJ4Kd5ipqvwJT_NboIe1Nv3OTVGLwdP9a5s9bDZUiIzS9SN51J2guaIvCW9GaXXCHT5gzOYv2wktGPvahUaIXsZHnq_GMnbYgv0wSvMBnRS0ujje9Ej1_tRVy0bDNNMpIK77fHwTW94vOmTsX7Y3TdUtnB08UFCL67QjP9m3b62v7oWlw7hma4ksqwT3zflccf4rrG-_GUrBIoazOAyoqs_TKgpgAcZNbE-85w06Knordu4CJcrzpo7KgBH2QfsGffGEGNh8O4pnTU6FzBEMECDc_RnpsbuqA2Nnc87VP0fo5vdVkJgbLpOwRqq1v__q400-OMCUt9hOrRx6RboANKPk_SMImM2KRmCVnoXtBNfopGTjZ5_cw6DcIcP5JarcBARJD96jUfc6xdF_MP0fDjTgIm6Uf4mgE1BH5qIihTRFDZgs_Bxv0S_TBIyIyY3tduCcnIBtZP_nbOwrqjvSHk303cGP5ufVoauUxLu2IX6DIyEAJleZNyFUeJF01XO0H8CRGhVrr5VqlHLXwOBtAcQyNbvDL10-oFL2uIkezQa2DwJOJw9qV6OuIDzyUQ39ZI0_rYelG00Yq0CkiFfwPzX3AF_m7A93TqxBHl88zsr586Afq1GUTBWpQg6vZavPu5jjvBD2XKRH8oaj5X5PsTx6DI7gaMFoIEc-gZ7g8ShOyx7klkc_bjBn-vlmO4o0HVXKhvDbGumP38AYKM7xWeSTkrm5Rp4zEdmHhbhVlyQULztyVdez86wu2JOUHHd1OIE3jYTFvw3orgOKD5axXZ4NG0JvSNwwCo_sAxbsY-_IKH3DCZSWIWlfaQ_ON2kB8H-s-SDNnS0qW6jcy86CbGJ7dm0D80ciEDKO9bGU7JVYyAV92dJfHtvV-F94XF9G6E99ha9BeLNodZEKNdCp3BANu2bCHygayjuAEBhBvmFAE9UON3-adgPvP1So8=w1146-h1526-no?authuser=0"
+                    <img src="./styles/images/IMG_4712.jpeg"
                         alt="Ezmaa on paddle board"></a>
                 </div>
                 <div>
@@ -47,22 +47,22 @@
             <div class="big">
                 <div>Horiseon Project</div>
                 <a href="https://ezmaa.github.io/bootcamp-homework/"> <img
-                        src="https://lh3.googleusercontent.com/8980EfUpCCLCA-vmPHz6MHuWZaYf1-bcjb4HKK6my3DB-StcrejMGKt3xW2I3OBK87nmRrAKHp8aax10RA1puT7iJFRZutYiwz6tmyL4o-wWyZ3qTici3OAZbazOYn2xpBMrkNNAXnM31SW_3aa7bgdR6GWhHa3v9N-DTbDMco0DXnCJCmRxMSwZrUKxdHl6uhA3mph13a_voPMeVjfCjUz-zcmhSF-yKGCeBT3U-Py-4k5wsIfblHxHuP93hRGJg22TWML0wnwmfhwwVL9KXumDm34AaiWIz4Ct7EFwgd-3IXCb7YxHxrvTW2lT9mgzrwLYt4_cQusx6vkfa_FoAONX0_RpWRcrJnTCMTIEX206SjunJ-q88V2BR9Wu0R5m_pQ8OM6y-O2QDa0XI3E2h73dRSmehH9SFeezj99koBaoTXdz33rmqHwA7sh9zB6HN0CUXRIr8UPEfCxFNGDVZUdHcmpINHhL-l9L7ivR3_7odlGjic7Ad5d5RqQk14evHKKR4erQ8-2czveDX_2B31imXb1HtK7qNLZUr78wfiOy3K7rPFHG9nITugx_hIB_tJFjifHhg7Z2Vkiu6b_ZBsOMR3HBJw9Eh8y_lFPtx-O1Ce_DkxeUC6yPl_zF6SRQter8dXndc2rZ-yNfhEmcj_2jL3zPKlVunm372pqPUVSBfSagKG36YeQmVTfswgM6czxqZ19uf2Ujw2XXPl5EOhD_-OTxh7BQwxAuq3Z6TpXlNSEUJYc0EJI31GqmkMSz9-gxxwAhN7as8UEiB3YFlCxy3lLWLfPeQzbejwZ884f2A08KmRVcwPrWTj4boRnx-vByrFf92c2UrTkSyLmNE3ScJpmmuNCk4BXNkerjAIrgqo4KZR4l_akouFzW4MivHAM42-NQ6T7rHuwZGBH4NBVnA3GdfFtjVusMsYINdkH12lmEvFcazI7-kI2arFORIKdUAKd9590=w2762-h1522-no?authuser=0"
+                        src="./styles/images/Screen Shot 2022-10-07 at 5.48.22 PM.png"
                         alt="Horiseon project picture"></a>
                 <!-- <p>Horiseon Project</p> -->
             </div>
             <div class="work-section">
                 <div>Sample Project</div>
                 <a href="https://ezmaa.github.io/prework-study-guide/"> <img
-                        src="https://lh3.googleusercontent.com/dcKymj4afAow8aMRFKgoUrD3VchltgwveDoxZhUddivG_ixBcC3cK4TzB1Mt-lCnMgvzQ5gukGU6V8DlBX2y5DzyqHXlJ5Du4GOCn0r5SobOVguIzPNeiP1OBi34cu94ilcm8X0-qZ3xqux1CBpBbRp2wv7twu5HBCZili5Gu4dV2jDzbkfbjN2St7QHocbjgQYlOGjxdLrYP8TJz3Oopo0BQLyHe3REoXNWcxHuHZmB-XSDvUJvCLJcSHMToQgHxtuxo1Nao1QZ-Ha3fm1fZkc2rSGuLQu5M55yzFkTgjK8WJ07J00e-sBVOa5q3dawNN3lTUpLrEEW2KTsw4ItmZZX3ua8FUQHofymNhPf1SFiWedX1WRcvOOE_DQbHJw7v7tYYSFmVJfdjC0KJMgvQbgJ_kK65RoF1EZEkcQKCebpWiht3zQ-DJIMGmrBoBd1SfX6aUEz8iUkhFb0OTmlVevnnTUS9FPmbgPn8mVX9YceQXKQFBthkXa-PnIriqaBB-XP9KgK1NrcZTYPIjHb6g_KODKK6bVOA_185-ojTGMOKdAbqadtv0uyDajOkkOEIMZtI8OVZ-sdi4hw1AlDS6xctk1FciGH0jIY_DlWPLxTBeCQ8-EZ0LCo3PnC4jSSRKYXOl5RC2cjgr71zM7EdVhq8WvhOkKiQ0L6BBQF0Qx4B3KcFNbatl3-HQ_ktH1gwCbniV6RPQsaHNZDrp6asq9ZBVrse928tvroGK1IRi0sAXQN1P68PSnphfz4_2DliPOiHWI2OWPNs7C_ZwTyQ07uK8KkfzmXHxCj8piOD5oqhYKMGSABXdO6MJFq4yCUGOko3hIjaSwNchJrznAnf3QqUFl5YeMS0hAh2oPbudDoBEok9yiNV-BtIUd8bzo9Mo5gyAg3R9i-zYi50Qzt6c4u-Gz9fGawvsbwkHiiy9UW4eOh0fwnP6lp_XpbAKnbMhDds25OD1w=w2878-h1066-no?authuser=0"
+                        src="./styles/images/Screen Shot 2022-10-07 at 5.50.33 PM.png"
                         alt="prework study guide example picture"></a>
                 <div>Sample Project</div>
                 <a href="https://ezmaa.github.io/prework-study-guide/"> <img
-                        src="https://lh3.googleusercontent.com/dcKymj4afAow8aMRFKgoUrD3VchltgwveDoxZhUddivG_ixBcC3cK4TzB1Mt-lCnMgvzQ5gukGU6V8DlBX2y5DzyqHXlJ5Du4GOCn0r5SobOVguIzPNeiP1OBi34cu94ilcm8X0-qZ3xqux1CBpBbRp2wv7twu5HBCZili5Gu4dV2jDzbkfbjN2St7QHocbjgQYlOGjxdLrYP8TJz3Oopo0BQLyHe3REoXNWcxHuHZmB-XSDvUJvCLJcSHMToQgHxtuxo1Nao1QZ-Ha3fm1fZkc2rSGuLQu5M55yzFkTgjK8WJ07J00e-sBVOa5q3dawNN3lTUpLrEEW2KTsw4ItmZZX3ua8FUQHofymNhPf1SFiWedX1WRcvOOE_DQbHJw7v7tYYSFmVJfdjC0KJMgvQbgJ_kK65RoF1EZEkcQKCebpWiht3zQ-DJIMGmrBoBd1SfX6aUEz8iUkhFb0OTmlVevnnTUS9FPmbgPn8mVX9YceQXKQFBthkXa-PnIriqaBB-XP9KgK1NrcZTYPIjHb6g_KODKK6bVOA_185-ojTGMOKdAbqadtv0uyDajOkkOEIMZtI8OVZ-sdi4hw1AlDS6xctk1FciGH0jIY_DlWPLxTBeCQ8-EZ0LCo3PnC4jSSRKYXOl5RC2cjgr71zM7EdVhq8WvhOkKiQ0L6BBQF0Qx4B3KcFNbatl3-HQ_ktH1gwCbniV6RPQsaHNZDrp6asq9ZBVrse928tvroGK1IRi0sAXQN1P68PSnphfz4_2DliPOiHWI2OWPNs7C_ZwTyQ07uK8KkfzmXHxCj8piOD5oqhYKMGSABXdO6MJFq4yCUGOko3hIjaSwNchJrznAnf3QqUFl5YeMS0hAh2oPbudDoBEok9yiNV-BtIUd8bzo9Mo5gyAg3R9i-zYi50Qzt6c4u-Gz9fGawvsbwkHiiy9UW4eOh0fwnP6lp_XpbAKnbMhDds25OD1w=w2878-h1066-no?authuser=0"
+                        src="./styles/images/Screen Shot 2022-10-07 at 5.50.33 PM.png"
                         alt="prework study guide example picture"></a>
                 <div>Sample Project</div>
                 <a href="https://ezmaa.github.io/prework-study-guide/"> <img
-                        src="https://lh3.googleusercontent.com/dcKymj4afAow8aMRFKgoUrD3VchltgwveDoxZhUddivG_ixBcC3cK4TzB1Mt-lCnMgvzQ5gukGU6V8DlBX2y5DzyqHXlJ5Du4GOCn0r5SobOVguIzPNeiP1OBi34cu94ilcm8X0-qZ3xqux1CBpBbRp2wv7twu5HBCZili5Gu4dV2jDzbkfbjN2St7QHocbjgQYlOGjxdLrYP8TJz3Oopo0BQLyHe3REoXNWcxHuHZmB-XSDvUJvCLJcSHMToQgHxtuxo1Nao1QZ-Ha3fm1fZkc2rSGuLQu5M55yzFkTgjK8WJ07J00e-sBVOa5q3dawNN3lTUpLrEEW2KTsw4ItmZZX3ua8FUQHofymNhPf1SFiWedX1WRcvOOE_DQbHJw7v7tYYSFmVJfdjC0KJMgvQbgJ_kK65RoF1EZEkcQKCebpWiht3zQ-DJIMGmrBoBd1SfX6aUEz8iUkhFb0OTmlVevnnTUS9FPmbgPn8mVX9YceQXKQFBthkXa-PnIriqaBB-XP9KgK1NrcZTYPIjHb6g_KODKK6bVOA_185-ojTGMOKdAbqadtv0uyDajOkkOEIMZtI8OVZ-sdi4hw1AlDS6xctk1FciGH0jIY_DlWPLxTBeCQ8-EZ0LCo3PnC4jSSRKYXOl5RC2cjgr71zM7EdVhq8WvhOkKiQ0L6BBQF0Qx4B3KcFNbatl3-HQ_ktH1gwCbniV6RPQsaHNZDrp6asq9ZBVrse928tvroGK1IRi0sAXQN1P68PSnphfz4_2DliPOiHWI2OWPNs7C_ZwTyQ07uK8KkfzmXHxCj8piOD5oqhYKMGSABXdO6MJFq4yCUGOko3hIjaSwNchJrznAnf3QqUFl5YeMS0hAh2oPbudDoBEok9yiNV-BtIUd8bzo9Mo5gyAg3R9i-zYi50Qzt6c4u-Gz9fGawvsbwkHiiy9UW4eOh0fwnP6lp_XpbAKnbMhDds25OD1w=w2878-h1066-no?authuser=0"
+                        src="./styles/images/Screen Shot 2022-10-07 at 5.50.33 PM.png"
                         alt="prework study guide example picture"></a>
             </div>
             <!-- Added fake projects to meet criteria -->
