--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
                 <!-- <p>Horiseon Project</p> -->
             </div>
             <div class="work-section">
-                <div>Sample Project</div>
-                <a href="https://ezmaa.github.io/prework-study-guide/"> <img
-                        src="./styles/images/Screen Shot 2022-10-07 at 5.50.33 PM.png"
-                        alt="prework study guide example picture"></a>
+                <div>Drink Outside The Box</div>
+                <a href="https://github.com/Ezmaa/Drink-Outside-The-Box"> <img
+                        src="./styles/images/dotb.png"
+                        alt="Drink outside the box project"></a>
                 <div>Sample Project</div>
                 <a href="https://ezmaa.github.io/prework-study-guide/"> <img
                         src="./styles/images/Screen Shot 2022-10-07 at 5.50.33 PM.png"
